Fixes on several initial issues seen on iPhone Safari

--- a/construction/stylesheets/navbar.css
+++ b/construction/stylesheets/navbar.css
@@ -50,6 +50,8 @@ li a.title {
 
 
 body {
+    cursor: pointer;
+
     font-family: sans-serif;
     background-color: var(--itemtextActive);
     font-size: 11pt;
